# fxpipeline

./: .env.example  .flake8  .gitignore  Makefile  README.md  app.py  backtest.py  data.py  dev_gym.py  evaluate_perf.py  fetch.py  main.py  model.py  my_module.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rl.py  simulation.py  sketch.py  temp.py  test.py  test_backtest.py  trading_env.py
.ideas/: TODO.md  ideas.md
backtest/: backtest.py  strategies.py
cart_pole/: test.py  train.py
core/: __init__.py  account.py  action.py  data.py  order.py  price_point.py  state.py
core_v3/: data_request.py
data/: __init__.py  app.py  cache.py  data.py  load_data.py  oanda_api.py  polygon_api.py  set_api.py
data_v3/: alpha_vantage_api.py
econ_sim/: main.py
fxpipeline/: __init__.py  cli.py  model.py
fxpipeline/backtest/: __init__.py  account.py  backtest.py  backtest_data.py  bt_core.py  data.py  model.py  order.py  pip_backtester.py  price.py  render.py  simulation.py  strategy.py  trading_env.py
fxpipeline/commands/: fetch.py  simulate.py
fxpipeline/core/: __init__.py  currency.py  data.py  forex_price.py  price.py  trade.py
fxpipeline/data/: __init__.py  alpha_vantage.py  alpha_vantage_data.py  app.py  base.py  core.py  currencies.py  currency.py  currency_pair.py  database.py  fetch.py  forex_price.py  get_loader.py  indicators.py  load.py  load_forex_price.py  loaders.py  main.py  pdr.py  polygon.py  polygon_data.py  refactor_pls.py  signal_utils.py  test.py  yahoo_data.py  yahoo_finance.py  yahoo_finance_data.py
fxpipeline/ingestion/: _OLD_database.py  __init__.py  base.py  data.py  data_request.py  database.py  error.py  factory.py  (+5 more)
grid_world/: train.py
ideas/: valuation.md
journal/: dev_log.md  dev_plan.md  documentation.md  ideas.md  valuation_exam_note.md
main/: evaluate_perf.py  fetch.py  rl.py
tests/: test_test.py  test_utils.py
trading_env/: trading_env.py  train.py
utils/: utils.py
(+104 files in other folders)
