[project]
name = "fxpipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Natachat Teecharcharn",email = "nteechar@Natachats-MacBook-Air.local"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
    "polygon-client (>=1.0a6,<2.0)",
    "polygon (>=1.2.8,<2.0.0)",
    "polygon-api-client (>=1.16.3,<2.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "pandas-ta (>=0.4.71b0,<0.5.0)",
    "numpy (<2.3.0)",
    "mplfinance (>=0.12.10b0,<0.13.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-timeout (>=2.4.0,<3.0.0)"
]
